Fix the values alignment

--- a/css/style.css
+++ b/css/style.css
@@ -684,6 +684,10 @@ body {
 
 /*IMAGES:WIDE SCREEN*/
 @media only screen and (min-width: 1001px) {
+  #mainAbout .values {
+    margin-left: 1em;
+    margin-right: 1em; }
+
   #mainAbout .officerPic {
     width: 30%;
     padding-right: 2%;
@@ -697,6 +701,9 @@ body {
     display: none; } }
 /*IMAGES:NARROW SCREEN*/
 @media only screen and (max-width: 1000px) {
+  #mainAbout .values {
+    display: block; }
+
   #mainAbout .officer {
     flex-direction: column; }
 
