--- a/scss/_pages/_about.scss
+++ b/scss/_pages/_about.scss
@@ -29,6 +29,10 @@
 /*IMAGES:WIDE SCREEN*/
 
 @media only screen and (min-width: 1001px) {
+    #mainAbout .values {
+        margin-left: 1em;
+        margin-right: 1em;
+    }
     #mainAbout .officerPic {
         width: 30%;
         padding-right: 2%;
@@ -47,6 +51,9 @@
 /*IMAGES:NARROW SCREEN*/
 
 @media only screen and (max-width: 1000px) {
+    #mainAbout .values {
+        display: block;
+    }
     #mainAbout .officer {
         flex-direction: column;
     }
